rbx_binary/src/tests/snapshots/rbx_binary__tests__util__axes__input.snap
---
source: rbx_binary/src/tests/util.rs
expression: text_decoded

---
num_types: 1
num_instances: 8
chunks:
  - Meta:
      entries:
        - - ExplicitAutoJoints
          - "true"
  - Inst:
      type_id: 0
      type_name: ArcHandles
      object_format: 0
      referents:
        - 0
        - 1
        - 2
        - 3
        - 4
        - 5
        - 6
        - 7
  - Prop:
      type_id: 0
      prop_name: Adornee
      prop_type: Ref
      values:
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Axes
      prop_type: Axes
      values:
        - []
        - - X
        - - X
          - Y
        - - X
          - Y
          - Z
        - - X
          - Z
        - - Y
        - - Y
          - Z
        - - Z
  - Prop:
      type_id: 0
      prop_name: Color3
      prop_type: Color3
      values:
        - - 0.05098039656877518
          - 0.4117647409439087
          - 0.6745098233222961
        - - 0.05098039656877518
          - 0.4117647409439087
          - 0.6745098233222961
        - - 0.05098039656877518
          - 0.4117647409439087
          - 0.6745098233222961
        - - 0.05098039656877518
          - 0.4117647409439087
          - 0.6745098233222961
        - - 0.05098039656877518
          - 0.4117647409439087
          - 0.6745098233222961
        - - 0.05098039656877518
          - 0.4117647409439087
          - 0.6745098233222961
        - - 0.05098039656877518
          - 0.4117647409439087
          - 0.6745098233222961
        - - 0.05098039656877518
          - 0.4117647409439087
          - 0.6745098233222961
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - ""
        - X
        - "X, Y"
        - "X, Y, Z"
        - "X, Z"
        - Y
        - "Y, Z"
        - Z
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Transparency
      prop_type: Float32
      values:
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
  - Prop:
      type_id: 0
      prop_name: Visible
      prop_type: Bool
      values:
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
        - - 1
          - -1
        - - 2
          - -1
        - - 3
          - -1
        - - 4
          - -1
        - - 5
          - -1
        - - 6
          - -1
        - - 7
          - -1
  - End

